--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -28,9 +28,9 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.20
+          go-version: '1.20'
       - name: build
-        run: go build -o main
+        run: go build -o main ./cmd/app
       - name: change permissions
         run: chmod +x main
       - name: start server
