--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -35,9 +35,7 @@ jobs:
         run: chmod +x main
       - name: start server
         run: ./main &
-#      - name: healthcheck
-#        run: timeout 60s sh -c 'until docker ps | grep ga-test | grep -q healthy; do echo "Waiting for container to be healthy..."; sleep 2; done'
       - name: healthcheck
-        run: timeout 60s sh -c 'while (( curl -s -o /dev/null -w %{http_code} http://localhost:80 != "200")); do echo "Waiting for container to be healthy..."; sleep 2; done'
+        run: timeout 60s sh -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:80)" != "200" ]]; do echo "Waiting for container to be healthy..."; sleep 2; done'
       - name: test
         run: go test -v ./cmd/tests
