--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -29,6 +29,8 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: '1.21.4'
+      - name: Install zsh
+        run: sudo apt-get update; sudo apt-get install zsh
       - name: build
         run: go build -o main ./cmd/app
       - name: change permissions
