--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -38,7 +38,7 @@ jobs:
       - name: start server
         run: ./main &
       - name: healthcheck
-        run: timeout 60s zsh -c 'while (( "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:80)" != "200" )); do echo "Waiting for container to be healthy..."; sleep 2; done'
+        run: timeout 60s zsh -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:80)" != "200" ]]; do echo "Waiting for container to be healthy..."; sleep 2; done'
         shell: zsh {0}
       - name: test
         run: go test -v ./cmd/tests
