--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -29,11 +29,16 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: '1.21.4'
+      - name: Install zsh
+        run: sudo apt-get update; sudo apt-get install zsh
       - name: build
         run: go build -o main ./cmd/app
       - name: change permissions
         run: chmod +x main
       - name: start server
-        run: ./main
+        run: ./main &
+      - name: healthcheck
+        run: timeout 60s zsh -c 'while [[ ''$(curl -s -o /dev/null -w ''%{http_code}'' localhost:3000)'' != "200" ]]; do echo "Waiting for container to be healthy..."; sleep 2; done'
+        shell: zsh {0}
       - name: test
         run: go test -v ./cmd/tests
